--- a/src/scss/03_elements/_elements.input.scss
+++ b/src/scss/03_elements/_elements.input.scss
@@ -104,7 +104,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
   &:after {
     color: white;
-    content: "\EA0C";
+    content: "\EA0B";
     font-family: "icon";
     left: 50%;
     opacity: 0;
