--- a/src/scss/05_components/_components.script.scss
+++ b/src/scss/05_components/_components.script.scss
@@ -11,6 +11,7 @@
 
   &--border {
     border: 1px solid rgb(var(--color-highlight));
+    background-color: unset;
   }
 
   &__refresh {
@@ -41,7 +42,7 @@
     background-color: transparent;
   }
 
-  input[type="color"] {
+  input[type='color'] {
     width: 10rem;
     height: auto;
     -webkit-appearance: none;
