changed to multi-video

--- a/src/scss/04_objects/_objects.animations.scss
+++ b/src/scss/04_objects/_objects.animations.scss
@@ -38,7 +38,14 @@
 }
 
 .fade-in {
+  opacity: 1;
   animation: fade-in 2s;
+  transition: opacity 0.3s ease-in-out;
+}
+
+#lia-tts-videos video {
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 
 @keyframes fade-out {
