fix: styling for copy to clipboard

--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -132,7 +132,7 @@
 
     &:hover {
       top: 0;
-      color: rgb(var(--color-highlight));
+      color: white;
       font-size: 2.2rem;
       //background-color: rgb(var(--color-highlight-dark), 0.5) !important;
     }
