improve(Table): None-table will be moved as a whole
The first column of a table is fixed. This behaviour originated from the
automated data visualization. If no data is detected or the author sets
this data-type to none, then this sticky behavior gets removed.

[Issue: #200]

--- a/src/scss/03_elements/_elements.table.scss
+++ b/src/scss/03_elements/_elements.table.scss
@@ -106,7 +106,7 @@
 
           &:before,
           &:after {
-            content: "";
+            content: '';
             position: absolute;
             top: 0;
             left: 0;
@@ -152,7 +152,7 @@
 
           &:before,
           &:after {
-            content: "";
+            content: '';
             position: absolute;
             top: 0;
             left: 0;
@@ -240,8 +240,10 @@
       border-right: $global-border;
     }
 
-    &:nth-child(2) {
-      border-left: 0;
+    .has-first-col-sticky {
+      &:nth-child(2) {
+        border-left: 0;
+      }
     }
   }
 
